Fix T73695: line highlight jitters with smooth scroll